adjusted bg color

--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
   <style>
     body {
       color: #ffffff;
-      background-color: ${colour};
+      background-color: pink;
       font-family: Arial, sans-serif;
       font-size: 14px;
     }
-    
+
     h1 {
       font-size: 500%;
       font-weight: normal;
       margin-bottom: 0;
     }
-    
+
     h2 {
       font-size: 200%;
       font-weight: normal;
